# Library

./: pyproject.toml
app/books/: admin.py  apps.py  models.py  serializes.py  urls.py  views.py
app/books/migrations/: 0001_initial.py  0002_alter_book_options_alter_book_deleted_at_and_more.py
config/: settings.py  urls.py
