[tool.poetry]
name = "library"
version = "0.1.0"
description = "'Api para gerenciamento de livros'"
authors = ["Guilherme Silva Costa <guilhermesilvac.gc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
djangorestframework = "^3.14.0"
django-filter = "^23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
